Force page reload when navigating back to main page

--- a/auth.html
+++ b/auth.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="back-link">
-            <a href="/fran-music-cave/">← BACK TO CAVE</a>
+            <a href="/fran-music-cave/" onclick="event.preventDefault(); window.location.replace('/fran-music-cave/');">← BACK TO CAVE</a>
         </div>
     </div>
 
