--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="profile-container">
-        <a href="/fran-music-cave/" class="back-btn">← BACK TO CAVE</a>
+        <a href="/fran-music-cave/" class="back-btn" onclick="event.preventDefault(); window.location.replace('/fran-music-cave/');">← BACK TO CAVE</a>
 
         <!-- Profile Header -->
         <div class="profile-header">
