Fix Firebase API key in migrate-tracks tool

--- a/migrate-tracks.html
+++ b/migrate-tracks.html
@@ -55,7 +55,7 @@
         import { getFirestore, collection, query, where, getDocs, doc, updateDoc, getDoc } from 'https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js';
 
         const firebaseConfig = {
-            apiKey: "AIzaSyDsy71T7M3BfNDD9h5CCijFDde7ام-LmLY",
+            apiKey: "AIzaSyDa5zahCZE7Gsh0JAkC1iimWutpBddRF1s",
             authDomain: "fran-music-cave.firebaseapp.com",
             projectId: "fran-music-cave",
             storageBucket: "fran-music-cave.firebasestorage.app",
