--- a/profile.html
+++ b/profile.html
@@ -142,9 +142,8 @@
             authDomain: "fran-music-cave.firebaseapp.com",
             projectId: "fran-music-cave",
             storageBucket: "fran-music-cave.firebasestorage.app",
-            messagingSenderId: "518773964413",
-            appId: "1:518773964413:web:46f3b94fb6db076c323b14",
-            measurementId: "G-3NN8Q90FX8"
+            messagingSenderId: "101732494139",
+            appId: "1:101732494139:web:5e4be5513b3e7b81eb0e08"
         };
 
         const app = initializeApp(firebaseConfig);
