Change hero title from SELECTIONS to UPLOAD YOUR MUSIC

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </header>
 
     <div class="hero-banner">
-        <h1>SELECTIONS</h1>
+        <h1>UPLOAD YOUR MUSIC</h1>
         <p>— SCROLL —</p>
         <button class="upload-toggle" id="uploadToggle">SUBMIT TRACK</button>
     </div>
