Add FAQ icon with tooltip to submit form

--- a/index.html
+++ b/index.html
@@ -141,6 +141,19 @@
         <div class="upload-container">
             <div class="upload-header">
                 <h3>SUBMIT TRACK</h3>
+                <div class="faq-icon" title="How to use">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="12" cy="12" r="10"></circle>
+                        <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
+                        <line x1="12" y1="17" x2="12.01" y2="17"></line>
+                    </svg>
+                    <div class="faq-tooltip">
+                        <strong>How to submit:</strong><br>
+                        1. Paste a Spotify, YouTube or SoundCloud link<br>
+                        2. YouTube & SoundCloud: auto-fills title and artist<br>
+                        3. Spotify: auto-fills title, add artist manually
+                    </div>
+                </div>
                 <button class="upload-close" id="uploadClose">×</button>
             </div>
             <form id="uploadForm" class="upload-form">
