Group FAQ and close button together in header

--- a/index.html
+++ b/index.html
@@ -141,16 +141,18 @@
         <div class="upload-container">
             <div class="upload-header">
                 <h3>SUBMIT TRACK</h3>
-                <div class="faq-icon" title="How to use">
-                    ?
-                    <div class="faq-tooltip">
-                        <strong>How to submit:</strong><br>
-                        • Paste a Spotify, YouTube or SoundCloud link<br>
-                        • YouTube & SoundCloud: auto-fills title and artist<br>
-                        • Spotify: auto-fills title only, add artist manually
+                <div class="header-actions">
+                    <div class="faq-icon" title="How to use">
+                        ?
+                        <div class="faq-tooltip">
+                            <strong>How to submit:</strong><br>
+                            • Paste a Spotify, YouTube or SoundCloud link<br>
+                            • YouTube & SoundCloud: auto-fills title and artist<br>
+                            • Spotify: auto-fills title only, add artist manually
+                        </div>
                     </div>
+                    <button class="upload-close" id="uploadClose">×</button>
                 </div>
-                <button class="upload-close" id="uploadClose">×</button>
             </div>
             <form id="uploadForm" class="upload-form">
                 <div class="form-group">
