Add custom styled alert popup system

--- a/index.html
+++ b/index.html
@@ -375,6 +375,16 @@
         window.chatUpdateDoc = updateDoc;
     </script>
 
+    <!-- Custom Alert Modal -->
+    <div class="custom-alert-overlay" id="customAlert">
+        <div class="custom-alert-box">
+            <div class="custom-alert-icon" id="alertIcon">⚠️</div>
+            <div class="custom-alert-message" id="alertMessage"></div>
+            <button class="custom-alert-btn" id="alertBtn">OK</button>
+        </div>
+    </div>
+
+    <script src="custom-alert.js"></script>
     <script src="script.min.js"></script>
     <script src="chat.min.js"></script>
     <script src="upload.min.js"></script>
