--- a/index.html
+++ b/index.html
@@ -120,6 +120,22 @@
                         <a onclick="handleLogout()" style="display:block;padding:.8rem 1rem;color:#666;text-decoration:none;font-size:.7rem;letter-spacing:2px;cursor:pointer;transition:all .3s">LOGOUT</a>
                     </div>
                 </div>
+                <!-- Notifications Bell -->
+                <div id="notificationsBtn" style="display:none;position:relative;margin-right:1rem">
+                    <button style="background:transparent;border:none;color:#666;cursor:pointer;position:relative;padding:0.5rem;transition:all .3s" onclick="toggleNotifications()">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                        </svg>
+                        <span id="notifBadge" style="display:none;position:absolute;top:4px;right:4px;background:#ff3366;color:#fff;font-size:9px;font-weight:bold;padding:2px 5px;border-radius:10px;min-width:16px;text-align:center"></span>
+                    </button>
+                    <div id="notificationsPanel" style="display:none;position:absolute;top:100%;right:0;margin-top:.5rem;background:#0a0a0a;border:1px solid #1a1a1a;width:320px;max-height:400px;overflow-y:auto;z-index:1001">
+                        <div style="padding:1rem;border-bottom:1px solid #1a1a1a">
+                            <h3 style="font-size:.8rem;color:#999;letter-spacing:2px;margin:0">NOTIFICATIONS</h3>
+                        </div>
+                        <div id="notificationsList"></div>
+                    </div>
+                </div>
                 <a href="auth.html" id="loginLink" class="github-link" style="font-size:.65rem;letter-spacing:2px;text-decoration:none">LOGIN</a>
                 <a href="https://github.com/Narfbach/fran-music-cave" target="_blank" class="github-link" aria-label="View on GitHub">
                     <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
@@ -289,7 +305,7 @@
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-        import { getFirestore, collection, addDoc, query, orderBy, limit, onSnapshot, serverTimestamp, doc, getDoc, updateDoc } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+        import { getFirestore, collection, addDoc, query, where, orderBy, limit, onSnapshot, serverTimestamp, doc, getDoc, updateDoc } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
 
         // Configuración de Firebase
         const firebaseConfig = {
@@ -352,9 +368,15 @@
                 } catch (error) {
                     console.error('Error loading user profile:', error);
                 }
+
+                // Initialize notifications
+                if (window.initNotifications) {
+                    window.initNotifications(user);
+                }
             } else {
                 document.getElementById('loginLink').style.display = 'block';
                 document.getElementById('userSection').style.display = 'none';
+                document.getElementById('notificationsBtn').style.display = 'none';
                 window.currentUser = null;
             }
         });
@@ -366,6 +388,7 @@
         window.chatCollection = collection;
         window.chatAddDoc = addDoc;
         window.chatQuery = query;
+        window.chatWhere = where;
         window.chatOrderBy = orderBy;
         window.chatLimit = limit;
         window.chatOnSnapshot = onSnapshot;
@@ -385,6 +408,7 @@
     </div>
 
     <script src="custom-alert.js"></script>
+    <script src="notifications.js"></script>
     <script src="script.min.js"></script>
     <script src="chat.min.js"></script>
     <script src="upload.min.js"></script>
