--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
         import { getFirestore, collection, addDoc, query, where, orderBy, limit, onSnapshot, serverTimestamp, doc, getDoc, updateDoc } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+        import { getMessaging, onMessage } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js';
 
         // Configuración de Firebase
         const firebaseConfig = {
@@ -322,6 +323,11 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
+        const messaging = getMessaging(app);
+
+        // Export messaging globally
+        window.firebaseMessaging = messaging;
+        window.firebaseOnMessage = onMessage;
 
         // Auth state listener
         onAuthStateChanged(auth, async (user) => {
@@ -369,9 +375,14 @@
                     console.error('Error loading user profile:', error);
                 }
 
-                // Initialize notifications
+                // Initialize in-app notifications
                 if (window.initNotifications) {
                     window.initNotifications(user);
+                }
+
+                // Initialize push notifications
+                if (window.pushNotificationManager && messaging) {
+                    window.pushNotificationManager.init(messaging, user);
                 }
             } else {
                 document.getElementById('loginLink').style.display = 'block';
@@ -407,7 +418,31 @@
         </div>
     </div>
 
+    <!-- Push Notification Permission Prompt -->
+    <div id="notificationPermissionPrompt" style="display:none;position:fixed;bottom:20px;right:20px;background:#0a0a0a;border:1px solid #333;padding:1.5rem;max-width:320px;z-index:10002;box-shadow:0 4px 20px rgba(0,0,0,0.7);animation:slideInRight 0.3s ease-out">
+        <div style="display:flex;align-items:flex-start;gap:1rem">
+            <div style="font-size:2rem;flex-shrink:0">🔔</div>
+            <div style="flex:1">
+                <div style="font-size:0.8rem;font-weight:bold;color:#fff;margin-bottom:0.5rem;letter-spacing:1px">
+                    ENABLE NOTIFICATIONS
+                </div>
+                <div style="font-size:0.7rem;color:#999;line-height:1.5;margin-bottom:1rem">
+                    Get notified when someone likes or comments on your tracks, even when the site is closed.
+                </div>
+                <div style="display:flex;gap:0.5rem">
+                    <button onclick="window.pushNotificationManager.requestPermission()" style="flex:1;background:#ff3366;border:none;color:#fff;padding:0.6rem;font-family:'Courier New',monospace;font-size:0.65rem;letter-spacing:2px;cursor:pointer;transition:all .3s">
+                        ENABLE
+                    </button>
+                    <button onclick="window.pushNotificationManager.hidePermissionPrompt()" style="flex:1;background:transparent;border:1px solid #333;color:#666;padding:0.6rem;font-family:'Courier New',monospace;font-size:0.65rem;letter-spacing:2px;cursor:pointer;transition:all .3s">
+                        LATER
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="custom-alert.js"></script>
+    <script src="push-notifications.js"></script>
     <script src="notifications.js"></script>
     <script src="script.min.js"></script>
     <script src="chat.min.js"></script>
