Add simple browser notifications (works without Cloud Functions)

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     </div>
 
     <script src="custom-alert.js"></script>
-    <script src="push-notifications.js"></script>
+    <script src="simple-notifications.js"></script>
     <script src="notifications.js"></script>
     <script src="script.min.js"></script>
     <script src="chat.min.js"></script>
