--- a/index-supabase.html
+++ b/index-supabase.html
@@ -309,7 +309,11 @@
         const supabaseUrl = 'https://mcologfwjggmmsihtrrq.supabase.co'
         const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1jb2xvZ2Z3amdnbW1zaWh0cnJxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk1NDE3NjgsImV4cCI6MjA3NTExNzc2OH0.oBdDaOprgrR_elipZYDyVkilxWeW6mECWgtugnenm68'
 
-        export const supabase = createClient(supabaseUrl, supabaseAnonKey)
+        export const supabase = createClient(supabaseUrl, supabaseAnonKey, {
+            auth: {
+                redirectTo: 'https://narfbach.github.io/fran-music-cave/index-supabase.html'
+            }
+        })
 
         // Export globally
         window.supabase = supabase
